# python-project-50

./: README.md  makefile  pyproject.toml
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  formatter.py  gendiff.py  parser.py  tree.py
tests/test_case/: test_all_cases.py
