[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "difference calculator"
authors = ["Badizawr <bravis13@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_50"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pytest-asyncio = "^0.23.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
#hexlet-python-package = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


